# bsuir-SP-table

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
docs/: task-1.md  task-2.md  task-3.md  task-4.md
pkgs/: bsuir-sp.nix
pkgs/bsuir-sp/: package.nix
pkgs/default/: shell.nix
src/: columns.c  events.c  fs.c  globals.c  grid.c  layout.c  main.c  main.h  provider.c  scroll.c  scrollbar.c  table_model.c  utils.c  virtual_scroll.c
src/include/: columns.h  config.h  events.h  fileentry.h  fs.h  globals.h  grid.h  layout.h  provider.h  scroll.h  scrollbar.h  table_model.h  types.h  utils.h  virtual_scroll.h
test/x/: bt
test/x/c/v/d/: cns
